------------------------------------------------------------------------
r2043 | gaser | 2022-07-20 11:49:22

Changed paths:
 M CHANGES.txt
 M Contents.m
 M Makefile
 M cat_update.m
 M html/cat.html
 M spm_cat12.m
 M update_revision.sh


1. Updated Makefile to consider new file structure
2. Fixed two issues in spm_cat12.m for open interactive help for newer Matlab
   versions and for dealing with mac permissions.
3. Some minor edits to cat_update.m and update_revision.sh------------------------------------------------------------------------
r2041 | gaser | 2022-07-19 12:05:50

Changed paths:
 M CHANGES.txt
 M Contents.m
 M Makefile
 M html/cat.html


Updated Makefile
------------------------------------------------------------------------
r2037 | gaser | 2022-07-18 17:35:47

Changed paths:
 M CHANGES.txt
 M README.md


Updated README.md
------------------------------------------------------------------------
r2036 | gaser | 2022-07-18 17:34:48

Changed paths:
 M CHANGES.txt
 M README.md


Updated README.md
------------------------------------------------------------------------
r2035 | gaser | 2022-07-18 17:33:30

Changed paths:
 M CHANGES.txt
 M README.md


Updated README.md
------------------------------------------------------------------------
r2034 | gaser | 2022-07-18 17:26:39

Changed paths:
 M CHANGES.txt
A  README.md


Added README.md
------------------------------------------------------------------------
r2033 | gaser | 2022-07-18 17:24:57

Changed paths:
 M CHANGES.txt
 M html/cat.html


Added README.md
------------------------------------------------------------------------
r2032 | gaser | 2022-07-14 22:39:10

Changed paths:
 M CHANGES.txt


Fixed: Corrected capitals in some filenames in html/images.
------------------------------------------------------------------------
r2031 | gaser | 2022-07-14 22:03:49

Changed paths:
 M CHANGES.txt
 M cat_io_volctype.m
 M cat_long_createTPM.m
 M cat_parallelize.m
 M cat_spm_preproc_run.m
 M cat_spm_results_ui.m