@@ -99,9 +99,13 @@ CAT.maci64/CAT_FractalDimension filter=lfs diff=lfs merge=lfs -text
 CAT.w32/CAT_DumpSurfArea.exe filter=lfs diff=lfs merge=lfs -text
 CAT.w32/CAT_SelfIntersect.exe filter=lfs diff=lfs merge=lfs -text
 CAT.w32/CAT_Surf2Vol.exe filter=lfs diff=lfs merge=lfs -text
+CAT.w32 filter=lfs diff=lfs merge=lfs -text
 CAT.glnx86/CAT_SmoothConvexity filter=lfs diff=lfs merge=lfs -text
 CAT.maca64/CAT_DumpSurfaceRatio filter=lfs diff=lfs merge=lfs -text
 CAT.maci64/CAT_Surf2Vol filter=lfs diff=lfs merge=lfs -text
+CAT.glnx86 filter=lfs diff=lfs merge=lfs -text
+CAT.maci64 filter=lfs diff=lfs merge=lfs -text
+CAT.maca64 filter=lfs diff=lfs merge=lfs -text
 templates_MNI152NLin2009cAsym/Template_4_Dartel.nii filter=lfs diff=lfs merge=lfs -text
 templates_MNI152NLin2009cAsym/brainmask.nii filter=lfs diff=lfs merge=lfs -text
 templates_MNI152NLin2009cAsym/Template_3_Dartel.nii filter=lfs diff=lfs merge=lfs -text
@@ -115,14 +119,11 @@ templates_MNI152NLin2009cAsym/Template_2_Dartel.nii filter=lfs diff=lfs merge=lf
 templates_MNI152NLin2009cAsym/hammers.nii filter=lfs diff=lfs merge=lfs -text
 templates_MNI152NLin2009cAsym/julichbrain.nii filter=lfs diff=lfs merge=lfs -text
 templates_MNI152NLin2009cAsym/lpba40.nii filter=lfs diff=lfs merge=lfs -text
-CAT.w32 filter=lfs diff=lfs merge=lfs -text
 templates_MNI152NLin2009cAsym/Template_4_GS.nii filter=lfs diff=lfs merge=lfs -text
 templates_MNI152NLin2009cAsym/suit.nii filter=lfs diff=lfs merge=lfs -text
 templates_MNI152NLin2009cAsym/Schaefer2018_200Parcels_17Networks_order.nii filter=lfs diff=lfs merge=lfs -text
 templates_MNI152NLin2009cAsym/Template_5_Dartel.nii filter=lfs diff=lfs merge=lfs -text
 templates_MNI152NLin2009cAsym/Template_6_Dartel.nii filter=lfs diff=lfs merge=lfs -text
-CAT.glnx86 filter=lfs diff=lfs merge=lfs -text
-CAT.maci64 filter=lfs diff=lfs merge=lfs -text
 templates_MNI152NLin2009cAsym/cat.nii filter=lfs diff=lfs merge=lfs -text
 templates_MNI152NLin2009cAsym/cat_1mm.nii filter=lfs diff=lfs merge=lfs -text
 templates_MNI152NLin2009cAsym/mori.nii filter=lfs diff=lfs merge=lfs -text
@@ -142,6 +143,6 @@ templates_MNI152NLin2009cAsym/cat_strokelesions_ATLAS303.nii filter=lfs diff=lfs
 templates_MNI152NLin2009cAsym/cobra.nii filter=lfs diff=lfs merge=lfs -text
 templates_MNI152NLin2009cAsym/Template_T1.nii filter=lfs diff=lfs merge=lfs -text
 templates_MNI152NLin2009cAsym/cat_wmh.nii filter=lfs diff=lfs merge=lfs -text
-CAT.maca64 filter=lfs diff=lfs merge=lfs -text
 CAT12-Manual.pdf filter=lfs diff=lfs merge=lfs -text
 VBM12-Manual_Japanese.pdf filter=lfs diff=lfs merge=lfs -text
+Template_GS1mm/* filter=lfs diff=lfs merge=lfs -text
